fix styling of scrollbars in totals and filters * remove description in named-resource-filter-field and make gaps there smaller

--- a/src/index.css
+++ b/src/index.css
@@ -287,6 +287,10 @@
   }
 }
 
+.scrollbar-track-modal {
+  scrollbar-color: var(--text-muted) var(--modal-bg)
+}
+
 .overall-totals-container {
   container-type: inline-size;
 }
